@@ -143,6 +143,7 @@ sub shutdown_procs {
         my $pid = read_file($pidfile);
         kill(15, $pid);
     }
+    delete $ENV{'THRUK_USE_LMD_FEDERATION_FAILED'};
     return;
 }
 
@@ -347,6 +348,7 @@ sub _write_lmd_config {
 
     for my $key (@{$Thruk::Backend::Pool::peer_order}) {
         my $peer = $Thruk::Backend::Pool::peers->{$key};
+        next if $peer->{'lmd_fake_backend'};
         $site_config .= "[[Connections]]\n";
         $site_config .= "name   = '".$peer->peer_name()."'\n";
         $site_config .= "id     = '".$key."'\n";
