@@ -1,0 +1,3 @@
+FROM  consol/omd-labs-centos:latest
+
+COPY playbook.yml /root/ansible_dropin/
